[package]
name = "ableton-batch-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
cacao = "0.3.2"
cocoa = "0.25.0"

[dependencies.core-graphics]
version = "0.23.2"
features = ["highsierra", "elcapitan"]

[dependencies.core-foundation]
version = "0.9.4"
features = ["mac_os_10_8_features", "with-uuid"]

[dependencies.fruity]
version = "0.3.0"
features = ["foundation"]
