[package]
name = "ableton-batch-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
accessibility = "0.1.6"
# cacao = "0.3.2"
cocoa = "0.25.0"
objc = "0.2.7"
objc_id = "0.1"
# osascript = "0.3.0"

[dependencies.osakit]
version = "0.2.3"
features = ["declare-script", "full"]

[dependencies.core-graphics]
version = "0.23.2"
features = ["highsierra", "elcapitan"]

[dependencies.core-foundation]
version = "0.9.4"
features = ["mac_os_10_8_features", "with-uuid"]

[dependencies.fruity]
version = "0.3.0"
features = ["foundation"]
